# worldforge

./: .gitattributes  .gitignore  DESIGN.md  LICENSE  MAP_DESIGN.md  README.md  TIMELINE_DESIGN.md  create_en_world.py  index.html  package-lock.json  package.json  phase4-verify.md  tailwind.config.ts  vite.config.ts  zirxYJb5
.claude/: launch.json
.github/workflows/: release.yml
map-prototype/: Cargo.toml  compare_versions.py  map-viewer.html
map-prototype/.claude/: launch.json
map-prototype/map_output/: map_data.json  viewer.html
map-prototype/map_output_123/: map_data.json
map-prototype/map_output_777/: map_data.json
map-prototype/src/: biome_smoothing.rs  biomes.rs  erosion.rs  heightmap.rs  hydrology.rs  main.rs  rain_shadow.rs  render.rs  rivers.rs
scripts/: sync-version.cjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray_icon_data.rs
src-tauri/src/commands/: api_key.rs  api_proxy.rs  consistency.rs  entry_crud.rs  file_watch.rs  memory.rs  mod.rs  outline.rs  relations.rs  scene_analyze.rs  session.rs  story.rs  timeline.rs  web_search.rs  world_init.rs
src-tauri/src/models/: constraint.rs  entry.rs  graph.rs  mod.rs  relationship.rs  timeline.rs
src-tauri/src/services/: constraint_check.rs  event_cascade.rs  graph_storage.rs  graph_traverse.rs  mod.rs
src-tauri/src/utils/: mod.rs
src/lib/: agent-loop.ts  api.ts  collapse-tools.ts  constants.ts  context-compression.ts  context-window.ts  i18n.ts  model-context.ts  (+8 more)
(+129 files in other folders)
