[package]
name = "worldforge"
version = "0.6.4"
description = "AI-powered worldbuilding and storytelling assistant"
authors = ["WorldForge"]
edition = "2021"

[lib]
name = "worldforge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
gray_matter = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
notify = "7"
walkdir = "2"
regex = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tokio-stream = "0.1"
eventsource-stream = "0.2"
pdf-extract = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "7", features = ["macos_kqueue"] }
